# kiro-ctx

./: README.md  pyproject.toml
.kiro/hooks/: agora-auto-checkpoint.kiro.hook  agora-index-after-write.kiro.hook  agora-index-on-save.kiro.hook  agora-inject-before-task.kiro.hook  agora-log-grep-results.kiro.hook  agora-session-inject.kiro.hook  agora-summarize-before-read.kiro.hook  agora-summarize-interaction.kiro.hook  checkpoint-after-task.kiro.hook
.kiro/settings/: mcp.json
.kiro/skills/agora-kiro/: SKILL.md
.kiro/steering/: agora-memory.md
agora_kiro/: __init__.py  cli.py  compress.py  embeddings.py  indexer.py  log.py  memory_server.py  session.py  summarizer.py  vector_store.py
agora_kiro/extractors/: __init__.py  python_ast.py  regex.py
docs/: DATABASE.md  DATABASE_AND_STRUCTURED_LAYER.md  KIRO_AGORA_INSIGHTS_AND_PLAN.md  KIRO_CODEBASE_AUDIT_AND_GAPS.md  KIRO_HOOKS.md  KIRO_PLATFORM_AND_AGORA_PLAN.md  KIRO_USER_PATH_AND_CONTEXT.md  REFACTOR_REWIRE_PLAN.md
power-agora-kiro/: POWER.md  mcp.json
tests/: conftest.py  test_extractors_ast.py  test_extractors_openapi.py  test_hooks.py  test_integration.py  test_mcp_server.py  test_memory.py  test_memory_tools.py  test_session.py
